<resources>
    <string name="app_name">Cricket Score Counter</string>
    <string name="six">Six</string>
    <string name="four">Four</string>
    <string name="two">Two</string>
    <string name="one">One</string>
    <string name="noball">No Ball</string>
    <string name="wide">Wide</string>
    <string name="out">Out</string>
    <string name="reset">RESET</string>
    <string name="zero">0</string>
    <string name="teama">TEAM A</string>
    <string name="teamb">TEAM B</string>
    <string name="slash">/</string>
    <string name="cricket">Cricket</string>
</resources>
